--- a/frontend/admin/loginadmin.html
+++ b/frontend/admin/loginadmin.html
@@ -71,7 +71,14 @@
             return;
           }
 
-          // Simpan sesi login admin
+          // ===============================
+          // SIMPAN IDENTITAS ADMIN
+          // ===============================
+          localStorage.setItem("admin_id", data.admin.id_user);
+          localStorage.setItem("admin_email", data.admin.email);
+          localStorage.setItem("admin_nama", data.admin.nama_lengkap);
+
+          // (simpan full object )
           localStorage.setItem("admin", JSON.stringify(data.admin));
 
           // Arahkan ke dashboard admin
