--- a/frontend/daftarpelatihan.html
+++ b/frontend/daftarpelatihan.html
@@ -363,7 +363,7 @@
                         <option value="">Pilih Agama</option>
                         <option value="Islam">Islam</option>
                         <option value="Kristen Protestan">Kristen Protestan</option>
-                        <option value="Kristen Katolik">Kristen Protestan</option>
+                        <option value="Kristen Katolik">Kristen Katolik</option>
                         <option value="Buddha">Buddha</option>
                         <option value="Konghucu">Konghucu</option>
                       </select>
